compiler/tests/success/syscall/x86-64/test_randombytes.jazz
export fn foo1() -> reg u64 {
   reg u64 res;
   stack u64[1] r;
   reg ptr u64[1] p;
   p = r;
   reg u64 len = 1;
   p = #randombytes(p, len);
   r = p;
   res = r[0];
   return res;
}

export fn foo2() -> reg u64 {
   reg u64 res;
   stack u8[8] r;
   reg ptr u8[8] p;
   p = r;
   reg u64 len = 8;
   p = #randombytes(p, len);
   res = p[:u64 0];
   return res;
}

export fn foo3() -> reg u8 {
   reg u8 res;
   stack u8[12] r;
   reg u64 len = 12;
   r = #randombytes(r, len);
   res = r[0];
   return res;
}

export fn foo4() -> reg u64 {
   reg u64 res;
   stack u64[2] r;
   reg u64 len = 1;
   r[0:1] = #randombytes(r[0:1], len);
   res = r[0];
   return res;
}
